welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: value unary_! is not a member of Int
while (!x==14) {
       ^